<resources>
    <string name="app_name">Emergency System</string>
    <string name="Welcome_Text">Welcome!</string>
    <string name="Logo_Text">Logo</string>
    <string name="email_hint">Email...</string>
    <string name="password_hint">Password...</string>
    <string name="loginb_text">Log In</string>
    <string name="signupb_text">Create Account</string>
    <string name="familyb_text">Family Member?</string>
    <string name="joinb_text">Join PCE!</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="fname_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="cpassword_hint">Confirm Password...</string>
    <string name="title_activity_main_screen_status">MainScreenStatus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="device_status">Status: </string>
    <string name="device_type">Device Type: </string>
    <string name="device_name">Device Name: </string>

    <string name="Rasp_desc">The Raspberry Pi is the brain of the system, it will send the signal in case something is wrong!</string>
    <string name="Rasp_cont">Raspberry desc</string>
    <string name="raspnameDesc">Give your mastermind a name!</string>
    <string name="raspipDesc">Please type your devices ip address</string>
    <string name="addRasp">Sync Raspberry!</string>

    <string name="raspName_hint">Name</string>
    <string name="raspip_hint">Ip Address</string>

    <string name ="Help_text">Help Me!</string>

    <string name="action_settings">Action Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
