<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignUp">

    <Button
        android:id="@+id/joinButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/joinb_text"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeDateConfirmPassword_et" />

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/Welcome_Text"
        android:textColor="@color/colorTextIcons"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <EditText
        android:id="@+id/takeDataName_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/fname_hint"

        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"

        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/takeLastName_et"
        app:layout_constraintEnd_toStartOf="@+id/takeLastName_et"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/takeLastName_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/lname_hint"
        android:inputType="textPersonName"

        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/takeDataName_et"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/takeDataEmail_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"

        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeDataName_et" />

    <EditText
        android:id="@+id/takeDataPassword_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"

        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeDataEmail_et" />

    <EditText
        android:id="@+id/takeDateConfirmPassword_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/cpassword_hint"
        android:inputType="textPassword"

        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takeDataPassword_et" />

</android.support.constraint.ConstraintLayout>