<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/Logo_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/Logo_Text"
        android:textColor="@color/colorTextIcons"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_outline_lock_24px"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_outline_lock_24px"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField" />

    <Button
        android:id="@+id/LogIn_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/loginb_text"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintEnd_toStartOf="@+id/SignUp_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

    <Button
        android:id="@+id/SignUp_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="10dp"
        android:text="@string/signupb_text"
        android:textColor="@color/colorTextIcons"
        android:background="@drawable/rounded_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/LogIn_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LogIn_Button" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/ic_outline_account_circle_24px"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_outline_account_circle_24px"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <Button
        android:id="@+id/Family_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/familybutton"
        android:text="@string/familyb_text"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogIn_Button" />

</android.support.constraint.ConstraintLayout>