<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <android.support.constraint.Guideline
        android:id="@+id/bottomguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/topguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_constraint_dstatus"
        app:layout_constraintBottom_toTopOf="@+id/bottomguideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topguideline"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/idDeviceDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_constraint_dstatus"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/deviceStatus"
        android:weightSum="10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_constraint_dstatus"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/topguideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/deviceIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:srcCompat="@drawable/ic_outline_router_24px" />

        <LinearLayout
            android:id="@+id/deviceData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/deviceNameTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/device_name" />

            <TextView
                android:id="@+id/deviceTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/device_type" />

            <TextView
                android:id="@+id/deviceStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="15sp"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/device_status" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/bAddDevice"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/circle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_outline_add_24px"
        />

    <Button
        android:id="@+id/addPulsera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>